Implemented ProjectUpdateServiceTest and ProjectCategoryServiceTest